# term2-cpp-lab2

./: CMakeLists.txt  main.cpp
include/: email.h  verifiedemail.h
src/: email.cpp  verifiedemail.cpp
